# covid19-sounds-neurips

./: .gitignore  .mdlrc  .pre-commit-config.yaml  LICENSE  README.md  mdl_style.rb  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yaml
COVID19_prediction/: README.md
COVID19_prediction/COVID_model/: model_network.py  model_params.py  model_test.py  model_train_vad.py  model_util.py  run_test.sh  run_test_frozen.sh  run_train.sh  run_train_frozen.sh
COVID19_prediction/Opensmile/: 1_extract_opensmile.py  2_classifcation.py
COVID19_prediction/data/: pickle_data.py
COVID19_prediction/vggish/: mel_features.py  vggish_slim.py  vggish_train_demo.py
Descriptive statistics/: data_statistics.ipynb  statistics_all_platforms.ipynb
Respiratory_prediction/: README.md
Respiratory_prediction/Opensmile/: 1_extract_opensmile.py  2_classifcation.py
Respiratory_prediction/data/: pickle_data.py  pickle_user.py  statistic.py
Respiratory_prediction/model/: model_network.py  model_test.py  model_train.py  model_train_vad.py  model_util.py  run_test.sh  run_test_frozen.sh  run_train.sh  run_train_frozen.sh
Respiratory_prediction/vggish/: vggish_input.py  vggish_params.py  vggish_postprocess.py  vggish_slim.py
YAMNet/: README.md  export.py  features.py  inference.py  inference_save.py  prediction_via_inference.py  requirements.txt  yamnet.py  yamnet_test.py  yamnet_visualization.ipynb
