[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[flake8]
exclude = .git,*migrations*,venv
max-line-length = 119
extend-ignore = E203, W503

[isort]
known_third_party = features,joblib,librosa,mel_features,model_network,model_params,model_util,nni,numpy,pandas,params,requests,resampy,sklearn,soundfile,tensorflow,tensorflow_hub,tensorflowjs,tf_slim,tfdeterminism,vggish_input,vggish_params,vggish_slim,yamnet
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 119
